--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="./Assets/Css/Style.css">
+    
     <title>Document</title>
 </head>
 <body>
@@ -68,16 +70,16 @@
                     <input type="button" value="Read More">  
                 </article>
             </section>
+            <hr>
         </main>
             
         <footer>
-            <hr>
-             <p>Desing by Ispace </p>
-            <a href="wwww.facebook.fr"></a>
-            <li><a href="www.facebook.fr"></a></li>
-            <li><a href=""></a></li>
-            <li></li>
 
+            <p class="titre">Desing by Ispace </p>  
+
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-google-plus"></i>
         </footer>
     </div>
 </body>
